--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,11 +9,16 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'list-bugs' %}">Bugs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Chats</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Bugs
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="{% url 'list-bugs' %}">Live bugs</a></li>
+              <li><a class="dropdown-item" href="{% url 'list-dead-bugs' %}">Squashed bugs</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{% url 'create-bug' %}">Add bugs</a></li>
+            </ul>
           </li>
         </ul>
         <span class="navbar-text">
