--- a/src/bugstack/templates/bugstack/list_bugs.html
+++ b/src/bugstack/templates/bugstack/list_bugs.html
@@ -4,27 +4,25 @@
 {% block content %}
 <form class="d-flex" action="{% url 'search-bugs' %}" method=GET>
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" value="{{ q }}">
-    <button class="btn btn-outline-success" type="submit">Search</button>
+    <button class="btn btn-outline-success btn-sm" type="submit">Search</button>
   </form>
 <br><br>
-{% for bug in bugs %}
+{% for bug in bugs_page %}
     {% if bug.is_active %}
         <div class="card">
-            <div class="card-header">{{ bug.project.name }}</div>
+            <div class="card-header">{{ bug.project.name }}
+              <a href="{% url 'update-bug' bug.id %}" class="btn btn-outline-secondary btn-sm" style="float: right;">Update Bug</a>
+              <a href="{% url 'squash-bug' bug.id %}" class="btn btn-outline-success btn-sm" style="float: right; margin-right:15px;">Squash Bug</a>    
+            </div>
             <div class="card-body">
               <h5 class="card-title">{{ bug.name }}</h5>
-              <p class="card-text">{{ bug.error_message }}</p>
+              <p class="card-text">{{ bug.description }}</p>
               <a href="#" class="btn btn-outline-secondary btn-sm">More info</a>
             </div>
         </div>
-        <div class="card-footer text-muted">
-                  
-          <a href="#" class="btn btn-outline-secondary btn-sm">Update Bug</a>
-          <a href="{% url 'squash-bug' bug.id %}" class="btn btn-outline-danger btn-sm">Squash Bug</a>
-          
-        </div>
         <br><br>
     {% endif %}
+{% endfor %}
 <hr>
 {% if bugs_page.has_other_pages %}
 <nav aria-label="...">
@@ -49,5 +47,5 @@
   </nav>
 {% endif %}
 
-{% endfor %}
+
 {% endblock %}
